# cstuff

./: CMakeLists.txt  Makefile  Makefile.example.mk  aton.c  aton.h  become.h  concatsym.h  db.c  db.h  db_all_types.snippet.h  db_commity.snippet.h  db_types.snippet.h  defer.h  ensure.h  export.h  itoa.c  itoa.h  mmapfile.h  myhash.h  myint.h  mystring.h  ownable_string.h  pat.c  pat.h  record.c  record.h  ref_string.h  result.h  status.mk  symjoin.h  test_aton.c
src/: become.c  become.h  db.c  db.h  defer.h  mmapfile.c  mmapfile.h  mystring.h  mystring.nonstatic.h  mystring.static.h  ownable_string.h  ownablestring.h  path.c  path.h
test/: test_aton.c  test_basedb.c  test_itoa.c  test_pat.c  test_record.c
